[package]
name = "cubrid-rust-error-handling"
version = "1.0.0"
edition = "2021"
description = "CUBRID Cookbook - Rust error handling examples"

[[bin]]
name = "01_connection_failure"
path = "01_connection_failure.rs"

[[bin]]
name = "02_constraint_violation"
path = "02_constraint_violation.rs"

[[bin]]
name = "03_query_timeout"
path = "03_query_timeout.rs"

[dependencies]
cubrid-tokio = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
